--- a/index.html
+++ b/index.html
@@ -1,132 +1,95 @@
-<!-- file: prityaa379_plate.html -->
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Plate — prityaa379</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>prityaa379 — YouTube</title>
+<style>
+  body{
+    margin:0;
+    background:#050507;
+    color:#fff;
+    font-family: "Inter", sans-serif;
+    text-align:center;
+    padding:20px;
+  }
+  .dramatic{
+    font-size:clamp(2.5rem, 9vw, 6rem);
+    font-weight:900;
+    letter-spacing:-0.02em;
+    line-height:1;
+    margin:10px 0 20px;
+    text-transform:uppercase;
+    text-shadow: 0 4px 10px rgba(0,0,0,0.6);
+  }
+  .sub{
+    font-size:clamp(1rem,3vw,1.6rem);
+    opacity:0.9;
+    margin-bottom:20px;
+  }
+  /* 3D Subscribe button */
+  .subscribe-btn{
+    display:inline-block;
+    padding:16px 36px;
+    margin:20px auto 40px;
+    background:linear-gradient(145deg, #ff0000, #cc0000);
+    color:#fff;
+    font-weight:800;
+    text-transform:uppercase;
+    font-size:1.2rem;
+    border:none;
+    border-radius:14px;
+    cursor:pointer;
+    text-decoration:none;
+    box-shadow:0 8px 0 #660000, 0 12px 22px rgba(0,0,0,0.6);
+    transition:all 0.15s ease-in-out;
+  }
+  .subscribe-btn:active{
+    transform:translateY(4px);
+    box-shadow:0 4px 0 #660000, 0 6px 14px rgba(0,0,0,0.6);
+  }
 
-  <!-- Google fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Playfair+Display:wght@700&family=Montserrat:wght@600&family=Roboto:wght@700&display=swap" rel="stylesheet">
-
-  <style>
-    html,body{margin:0;padding:0;}
-    body{
-      display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
-      font-family:Roboto,system-ui,Arial,sans-serif;background:#f0f0f0;padding:20px;gap:20px;
-    }
-
-    .plate{
-      width:280px;height:280px;border-radius:50%;background:linear-gradient(180deg,#fff 0%,#f8f8f8 100%);
-      display:grid;place-items:center;position:relative;overflow:hidden;
-      box-shadow:0 20px 40px rgba(0,0,0,.25), inset 0 -6px 15px rgba(0,0,0,.1);
-      transform:perspective(800px) rotateX(5deg);
-    }
-    .label{
-      font-size:32px;color:#222;text-align:center;transition:opacity .6s ease,transform .6s ease;
-      padding:8px 14px;
-    }
-    .rim{
-      position:absolute;inset:10px;border-radius:50%;box-shadow:inset 0 6px 12px rgba(0,0,0,0.1);
-    }
-    .caption{font-size:13px;color:#666;text-align:center;margin-top:10px}
-    .fade-out{opacity:0;transform:scale(.95)}
-    .fade-in{opacity:1;transform:scale(1)}
-
-    /* Hamburger */
-    .hamburger{position:fixed;top:16px;left:16px;width:34px;height:28px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer;z-index:1001}
-    .hamburger span{display:block;height:4px;background:#333;border-radius:2px;transition:.4s}
-    .hamburger.active span:nth-child(1){transform:rotate(45deg) translateY(9px)}
-    .hamburger.active span:nth-child(2){opacity:0}
-    .hamburger.active span:nth-child(3){transform:rotate(-45deg) translateY(-9px)}
-
-    /* Side menu */
-    .side-menu{position:fixed;top:0;left:-240px;width:240px;height:100%;background:#111;color:#fff;transition:left .4s;padding:40px 20px;z-index:1000;display:flex;flex-direction:column;gap:16px}
-    .side-menu.open{left:0}
-    .side-menu a{color:#fff;text-decoration:none;font-size:18px}
-
-    /* Black strip */
-    .black-box{
-      width:100%;max-width:420px;height:50px;background:#000;color:#fff;
-      display:flex;align-items:center;justify-content:center;border-radius:8px;font-size:16px;font-weight:600;
-      box-shadow:0 6px 16px rgba(0,0,0,.4);
-      transform:perspective(600px) rotateX(2deg);
-    }
-
-    /* Big black A4-like box */
-    .big-black-box{
-      width:100%;max-width:794px;min-height:400px;background:#000;color:#fff;border-radius:12px;padding:20px;
-      box-shadow:0 10px 25px rgba(0,0,0,.45);
-      font-size:16px;line-height:1.6;
-      transform:perspective(1000px) rotateX(3deg);
-    }
-
-    /* White half A4 box */
-    .white-half-box{
-      width:100%;max-width:397px;min-height:200px;background:#fff;color:#000;border-radius:12px;padding:20px;
-      box-shadow:0 8px 20px rgba(0,0,0,.25);
-      font-size:15px;line-height:1.6;
-      transform:perspective(1000px) rotateX(-3deg);
-    }
-
-    /* Responsive */
-    @media(min-width:768px){
-      .plate{width:360px;height:360px;}
-      .label{font-size:40px;}
-      .black-box{height:60px;font-size:18px;}
-      .big-black-box{padding:40px;font-size:18px;}
-      .white-half-box{padding:30px;font-size:16px;}
-    }
-    @media(min-width:1024px){
-      body{padding:40px;gap:30px;}
-      .plate{width:420px;height:420px;}
-      .label{font-size:48px;}
-    }
-  </style>
+  /* video grid */
+  .videos{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+    gap:20px;
+    max-width:1200px;
+    margin:0 auto;
+  }
+  .video iframe{
+    width:100%;
+    height:200px;
+    border:none;
+    border-radius:12px;
+    box-shadow:0 6px 18px rgba(0,0,0,0.6);
+  }
+  @media (min-width:600px){
+    .video iframe{height:280px;}
+  }
+</style>
 </head>
 <body>
-  <div class="hamburger" id="hamburger">
-    <span></span><span></span><span></span>
+  <h1 class="dramatic">Under Construction</h1>
+  <div class="sub">But you can still vibe with my music, vlogs & roasts 😁</div>
+
+  <a class="subscribe-btn" href="https://www.youtube.com/@prityaa379?sub_confirmation=1" target="_blank" rel="noopener">
+    Subscribe on YouTube
+  </a>
+
+  <div class="videos">
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/oE81eYmvhIw" allowfullscreen></iframe>
+    </div>
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/mm5t-5GFAFY" allowfullscreen></iframe>
+    </div>
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/TAIdOAo3OaU" allowfullscreen></iframe>
+    </div>
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/4DSYIWhypas" allowfullscreen></iframe>
+    </div>
   </div>
-
-  <nav class="side-menu" id="sideMenu">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
-  </nav>
-
-  <div class="plate" aria-label="white plate">
-    <div class="rim"></div>
-    <div id="label" class="label fade-in">prityaa379</div>
-  </div>
-
-  <div class="black-box">building timelines beyond the trend</div>
-
-  <div class="big-black-box">
-    <p>Prityaa379 is a creative identity built on the foundation of innovation and dedication. With a vision to craft designs and ideas that transcend temporary fashions, Prityaa379 believes in creating lasting impressions. The journey reflects a pursuit of excellence, aiming to inspire people with work that is both timeless and unique.</p>
-    <p>Beyond the digital presence, Prityaa379 embodies consistency and authenticity. Each creation is more than just an outcome — it is a statement of passion and perseverance. By blending technology, creativity, and strategic thinking, Prityaa379 continues to push boundaries and set new benchmarks in its space.</p>
-  </div>
-
-  <div class="white-half-box">
-    <p>This is a half A4-sized white box section. You can use this area to highlight additional details, notes, or supporting information about prityaa379. It provides a contrasting background to the black box, making the content inside stand out clearly.</p>
-  </div>
-
-  <div class="caption">Font will change every 10 seconds — 5 times.</div>
-
-  <script>
-    (function(){
-      const fonts=['Lobster, cursive','Pacifico, cursive','Playfair Display, serif','Montserrat, sans-serif','Roboto, sans-serif'];
-      const label=document.getElementById('label');
-      let changes=0;const maxChanges=5;const intervalMs=10000;
-      label.style.fontFamily=fonts[0];
-      const changeOnce=()=>{if(changes>=maxChanges)return clearInterval(timer);label.classList.remove('fade-in');label.classList.add('fade-out');setTimeout(()=>{const fontIndex=(changes)%fonts.length;label.style.fontFamily=fonts[fontIndex];label.classList.remove('fade-out');label.classList.add('fade-in');changes+=1;},600)};
-      const timer=setInterval(changeOnce,intervalMs);
-      setTimeout(()=>{if(changes>=maxChanges)clearInterval(timer);},(maxChanges+1)*intervalMs);
-      const hamburger=document.getElementById('hamburger');
-      const sideMenu=document.getElementById('sideMenu');
-      hamburger.addEventListener('click',()=>{hamburger.classList.toggle('active');sideMenu.classList.toggle('open');});
-    })();
-  </script>
 </body>
 </html>
