--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
   @media (min-width:600px){
     .video iframe{height:280px;}
   }
+
+  /* about section */
+  .about{
+    margin-top:40px;
+    background:#cc0000;
+    padding:30px 20px;
+    border-radius:12px;
+    max-width:1000px;
+    margin-left:auto;
+    margin-right:auto;
+    box-shadow:0 6px 18px rgba(0,0,0,0.5);
+  }
+  .about p{
+    font-size:clamp(1rem, 3vw, 1.3rem);
+    line-height:1.6;
+    margin:12px 0;
+    font-weight:500;
+    color:#fff;
+  }
 </style>
 </head>
 <body>
@@ -90,6 +109,11 @@
     <div class="video">
       <iframe src="https://www.youtube.com/embed/4DSYIWhypas" allowfullscreen></iframe>
     </div>
+  </div>
+
+  <div class="about">
+    <p>prityaa379 is more than just a YouTube channel — it’s a whole vibe. From raw roasts that make you laugh out loud, to music and vlogs that show the real grind and daily hustle, this space is built to entertain, inspire, and connect. Every video drops with high energy, unfiltered thoughts, and that Gen-Z edge that keeps things authentic.</p>
+    <p>Behind prityaa379 is pure passion for creating content that feels alive. Whether it’s music drops, travel vlogs, or funny takes on everyday situations, the goal is simple: to keep you entertained and part of the journey. If you want a channel that mixes humor, creativity, and realness, you’re in the right place — welcome to the fam! 🔥</p>
   </div>
 </body>
 </html>
